# SlideSkeleton

./: CMakeLists.txt  main.cpp
pages/: pages.qrc
python/: python.qrc  renderCode.py
qml/: .qml.qrc.swp  CodeView.qml  HtmlView.qml  NestedList.qml  Notes.qml  Pages.qml  Slide.qml  Style.qml  StyleText.qml  presentation.qml  qml.qrc  qmldir
theme/: BackGround.qml  BackPage.qml  ContentArea.qml  Footer.qml  FrontPage.qml  Header.qml  qml.qrc  theme.qrc
